--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
         window.console = window.console || function(t) {};
       </script>
       <style>
+          .container {
+    width: 90%; /* 90% de la largeur de l'écran */
+    max-width: 1200px; /* Maximum de 1200px pour les grands écrans */
+}
+/* Style par défaut */
+body {
+    font-size: 16px;
+}
+
+/* Pour les écrans de moins de 600px */
+@media (max-width: 600px) {
+    body {
+        font-size: 14px; /* Réduit la taille de la police pour les petits écrans */
+    }
+}
+/* Style par défaut */
+body {
+    font-size: 16px;
+}
+
+/* Pour les écrans de moins de 600px */
+@media (max-width: 600px) {
+    body {
+        font-size: 14px; /* Réduit la taille de la police pour les petits écrans */
+    }
+}
+/* Exemple de Flexbox */
+.container {
+    display: flex;
+    flex-direction: column; /* Aligne les éléments en colonne */
+}
+
+/* Exemple de Grid */
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Crée une grille qui s'adapte */
+}
+
         * {
   margin: 0;
   margin-top: 0;
