--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ ul li a:hover {
   font-weight: bold;
   font-size: 10vw; /* Utilisation de 'vw' pour une taille responsive du texte */
   font-family: 'mega_freshregular';
-  max-font-size: 120px; /* Limite maximale pour grands écrans */
+  max-font-size: 400%; /* Limite maximale pour grands écrans */
 }
 
 .hero {
