--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@ ul li a:hover {
 }
 
 /* Media Queries pour les tablettes et téléphones */
-@media (max-width: 768px) {
+@media screen and (max-width: 1499px) {
   #logo {
-    height: 12vw; /* Ajustement du logo pour les tablettes */
-    width: 12vw;
+    height: 40vw; /* Ajustement du logo pour les tablettes */
+    width: 40vw;
   }
 
   #titre {
-    font-size: 6vw; /* Ajustement du titre pour les écrans plus petits */
+    font-size: 20vw; /* Ajustement du titre pour les écrans plus petits */
   }
 
   .hero {
@@ -238,7 +238,7 @@ ul li a:hover {
   }
 }
 
-@media (max-width: 480px) {
+@media screnn and (max-width: 1480px) {
   #logo {
     height: 15vw; /* Plus grand sur les petits écrans */
     width: 15vw;
